[gd_scene load_steps=4 format=3 uid="uid://gnmcx4u0nu0q"]

[ext_resource type="Script" path="res://UI/upgrade_menu.gd" id="1_hmtce"]
[ext_resource type="Texture2D" uid="uid://baqcrgmqgt1wq" path="res://Assets/cow.png" id="2_oiqvv"]
[ext_resource type="Texture2D" uid="uid://bxmf27f3a6wkc" path="res://Assets/mib.png" id="3_rg2jk"]

[node name="UpgradeMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_hmtce")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
offset_right = 382.0
offset_bottom = 67.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
offset_right = 382.0
offset_bottom = 31.0
theme_override_constants/separation = 25

[node name="UpgradeSpeed" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_right = 57.0
offset_bottom = 31.0
text = "SPEED"

[node name="UpgradeScale" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 82.0
offset_right = 138.0
offset_bottom = 31.0
text = "SCALE"

[node name="UpgradeStorage" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 163.0
offset_right = 243.0
offset_bottom = 31.0
text = "STORAGE"

[node name="RemoveDirt" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 268.0
offset_right = 382.0
offset_bottom = 31.0
text = "REMOVE DIRT"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 35.0
offset_right = 382.0
offset_bottom = 67.0
columns = 10

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/GridContainer"]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("2_oiqvv")

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/VBoxContainer/GridContainer"]
offset_left = 36.0
offset_right = 68.0
offset_bottom = 32.0
texture = ExtResource("2_oiqvv")

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/VBoxContainer/GridContainer"]
offset_left = 72.0
offset_right = 104.0
offset_bottom = 32.0
texture = ExtResource("2_oiqvv")

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2i(32, 32)
offset_left = 108.0
offset_right = 140.0
offset_bottom = 32.0
texture = ExtResource("3_rg2jk")
ignore_texture_size = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/UpgradeSpeed" to="." method="_on_upgrade_speed_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/UpgradeScale" to="." method="_on_upgrade_scale_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/UpgradeStorage" to="." method="_on_upgrade_storage_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/RemoveDirt" to="." method="_on_remove_dirt_pressed"]
